Redesigned contact section

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	font-family: 'Mulish', sans-serif;
+	font-family: 'Sour Gummy', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -24,19 +24,12 @@ body {
 	background-color: #072028;
 }
 
-.text-gradient {
-	background-color: rgb(41, 41, 41);
-	background-image: linear-gradient(142deg, rgb(216, 216, 216) 0%, rgb(190, 190, 190) 50%, rgb(206, 206, 206) 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
-.white-gradient {
-	background: rgba(255, 255, 255, 0.05);
+.input-gradient {
+	background: rgba(35, 161, 180, 0.8);
 	border-radius: 16px;
 	backdrop-filter: blur(5px);
 	-webkit-backdrop-filter: blur(5px);
-	border: 1px solid rgba(255, 255, 255, 0.2);
+	border: 1px solid rgba(35, 161, 180, 0.2);
 }
 
 .blue-gradient {
