--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,53 @@ form textarea:invalid[focused='true'] {
 .footer-icon-shadow:hover {
 	filter: drop-shadow(3px 5px 3px #c80c59);
 }
+
+/* Gallery mosaic */
+
+.image-mosaic {
+	display: grid;
+	row-gap: 1rem;
+	column-gap: 0;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	grid-auto-rows: 240px;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	box-shadow: rgba(3, 8, 20, 0.1);
+	height: 100%;
+	width: 100%;
+	border-radius: 4px;
+	transition: all 500ms;
+	overflow: hidden;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	padding: 0;
+	margin: 0;
+	z-index: 10;
+}
+
+.card-with-bg {
+	background-color: #353535;
+}
+
+@media screen and (min-width: 500px) {
+	.image-mosaic {
+		gap: 1rem;
+	}
+}
+
+@media screen and (min-width: 600px) {
+	.card-tall {
+		grid-row: span 2 / auto;
+	}
+
+	.card-wide {
+		grid-column: span 2 / auto;
+	}
+}
