--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,25 @@ body {
 	background-color: #072028;
 }
 
+.navbar-bg {
+	background-color: transparent;
+	transition: background-color 0.3s ease;
+}
+
+.navbar-bg-scrolled {
+	background-color: #c80c59;
+}
+
+.hero-bg {
+	background-image: url('./images/hero-image-section/hero-bg.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+.hero-bg h1 {
+	font-family: 'Lavishly Yours', 'cursive';
+}
+
 /* Gallery mosaic */
 
 .image-mosaic {
@@ -107,5 +126,11 @@ form textarea:invalid[focused='true'] {
 
 	.card-wide {
 		grid-column: span 2 / auto;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.hero-bg {
+		background-image: url('./images/hero-image-section/hero-bg-xl.jpg');
 	}
 }
