--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,13 @@ body {
 
 .card-with-bg {
 	background-color: #353535;
+	animation: loading 1s infinite alternate;
+}
+
+@keyframes loading {
+	to {
+		background-color: #6d6d6d;
+	}
 }
 
 /* ---------------------------------------- */
