--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,9 @@ form textarea:invalid[focused='true'] {
 		background-image: url('./images/hero-image-section/hero-bg-xl.jpg');
 	}
 }
+
+@media screen and (min-width: 2320px) {
+	body {
+		overflow-x: hidden;
+	}
+}
