--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
+*,
+*::after,
+*::before {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
 html {
-	scroll-padding-top: 30px;
+	scroll-padding-top: 80px;
 	scroll-behavior: smooth;
 	-webkit-scroll-behavior: smooth;
 }
