--- a/src/subpages/PageNotFound/styles/styles.css
+++ b/src/subpages/PageNotFound/styles/styles.css
@@ -1,7 +1,11 @@
 .notfound {
 	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 	width: 100%;
-	min-height: 80vh;
+	min-height: 100vh;
 	overflow: hidden;
 }
 
@@ -10,7 +14,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	padding: 1em 0 0;
+	padding: 1em 0 2em;
 	width: 100%;
 }
 
@@ -23,13 +27,13 @@
 	margin: 0.5em;
 	color: #e9e9e9;
 	font-size: 1.8em;
+	font-weight: 500;
 	text-align: center;
 }
 
 .notfound-btn {
 	display: block;
 	padding: 0.75em 3.5em;
-	margin-bottom: 1em;
 	color: #e9e9e9;
 	background-color: #c80c59;
 	border: none;
@@ -65,10 +69,6 @@
 }
 
 @media screen and (min-width: 768px) and (min-height: 500px) {
-	.notfound {
-		min-height: 83vh;
-	}
-
 	.notfound-btn {
 		padding: 0.8em 0;
 		margin-top: 1em;
@@ -78,20 +78,12 @@
 }
 
 @media screen and (min-width: 1024px) {
-	.notfound {
-		min-height: 78vh;
-	}
-
 	.notfound-btn {
 		font-size: 1.1em;
 	}
 
 	.notfound-btn:hover {
 		background-color: #23a1b4;
-	}
-
-	.notfound-container {
-		padding: 1em 0 0.5em;
 	}
 
 	.notfound-img {
