Rewrited quote section adn changed it to motto

--- a/src/components/Navbar/styles/styles.css
+++ b/src/components/Navbar/styles/styles.css
@@ -29,8 +29,10 @@
 	margin-right: auto;
 	top: 0;
 	height: 80px;
-	letter-spacing: 0.1em;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
 	background-color: transparent;
+	letter-spacing: 0.1em;
 	transition: background-color 0.3s ease-out, box-shadow 0.3s ease-out;
 	z-index: 50;
 }
