--- a/src/components/Navbar/styles/styles.css
+++ b/src/components/Navbar/styles/styles.css
@@ -66,8 +66,7 @@
 	color: #e9e9e9;
 }
 
-.navbar-mobile-list,
-.navbar-login-icon {
+.navbar-mobile-list {
 	display: flex;
 	align-items: center;
 }
@@ -157,13 +156,8 @@
 		margin: 0 1rem;
 	}
 
-	.navbar-login-icon {
-		margin-top: 5px;
-	}
-
 	.navbar-special-icon {
-		margin-left: 1.55rem;
-		margin-right: 1rem;
+		margin: 5px 1rem 0 1.55rem;
 	}
 }
 
@@ -234,10 +228,6 @@
 
 	.navbar-item {
 		margin: 0 2rem;
-	}
-
-	.navbar-login-icon {
-		margin: 5px 2rem 0;
 	}
 }
 
