--- a/src/sections/Offer/styles/styles.css
+++ b/src/sections/Offer/styles/styles.css
@@ -18,6 +18,7 @@
 }
 
 .offer {
+	padding: 30px 0 90px;
 	background-color: #c4c4c4;
 	color: #072028;
 	overflow-x: hidden;
@@ -26,7 +27,6 @@
 .offer-wrapper {
 	margin: 0 auto;
 	max-width: 2160px;
-	padding-bottom: 6em;
 }
 
 .offer-title {
@@ -44,6 +44,12 @@
 	}
 }
 
+@media screen and (min-width: 768px) {
+	.offer {
+		padding: 30px 0 100px;
+	}
+}
+
 @media screen and (min-width: 990px) {
 	.offer-title {
 		font-size: 6.5rem;
@@ -52,7 +58,7 @@
 
 @media screen and (min-width: 1358px) {
 	.offer {
-		padding: 50px 0;
+		padding-top: 50px;
 	}
 
 	.offer-title {
