--- a/src/components/Forms/styles/styles.css
+++ b/src/components/Forms/styles/styles.css
@@ -74,8 +74,20 @@
 	font-size: 0.95em;
 }
 
+form input:invalid[focused='true'] ~ span,
+form textarea:invalid[focused='true'] ~ span {
+	visibility: visible;
+}
+
+form input:invalid[focused='true'],
+form textarea:invalid[focused='true'] {
+	border: 1px solid #c80c59;
+}
+
 .form-submit {
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	padding: 0.75em 3.5em;
 	margin: 1em 1em 1.25em;
 	color: #e9e9e9;
