--- a/src/components/Navbar/styles/styles.css
+++ b/src/components/Navbar/styles/styles.css
@@ -7,7 +7,8 @@
 .navbar-wrapper,
 .navbar-container,
 .navbar-title,
-.navbar-title-box {
+.navbar-title-box,
+.navbar-mobile-list {
 	display: flex;
 	align-items: center;
 }
@@ -64,11 +65,6 @@
 	right: 0;
 	margin: 1rem;
 	color: #e9e9e9;
-}
-
-.navbar-mobile-list {
-	display: flex;
-	align-items: center;
 }
 
 .navbar-mobile-list {
@@ -235,36 +231,4 @@
 	.navbar-container {
 		padding: 0 11.6rem;
 	}
-}
-
-/* Animations */
-
-@keyframes slide-in {
-	0% {
-		-webkit-transform: translateX(120%);
-		transform: translateX(120%);
-	}
-	100% {
-		-webkit-transform: translateX(0%);
-		transform: translateX(0%);
-	}
-}
-
-@keyframes slide-out {
-	0% {
-		-webkit-transform: translateX(0%);
-		transform: translateX(0%);
-	}
-	100% {
-		-webkit-transform: translateX(120%);
-		transform: translateX(120%);
-	}
-}
-
-.animate-slide-in {
-	animation: slide-in 0.5s ease-out;
-}
-
-.animate-slide-out {
-	animation: slide-out 0.5s ease-out;
 }
