--- a/src/components/CookieBanner/styles/styles.css
+++ b/src/components/CookieBanner/styles/styles.css
@@ -20,8 +20,26 @@
 	}
 }
 
+@media screen and (min-width: 1024px) {
+	.cookie-text {
+		padding: 1em;
+	}
+}
+
 @media screen and (min-width: 1358px) {
 	.cookie-text {
 		font-size: 15px;
+	}
+}
+
+@media screen and (min-width: 1536px) {
+	.cookie-text {
+		margin-left: -7.25rem;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	.cookie-text {
+		margin-left: -18rem;
 	}
 }
