--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,24 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+@media screen and (min-width: 1358px) {
+	#cookie-btn {
+		margin-right: 7rem !important;
+	}
+}
+
+@media screen and (min-width: 1536px) {
+	#cookie-btn {
+		margin-right: 9rem !important;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	#cookie-btn {
+		margin-right: 12.5rem !important;
+	}
+}
+
 /* Gallery mosaic */
 
 .image-mosaic {
