Improved offer carousel for more features

--- a/src/sections/Offer/styles/styles.css
+++ b/src/sections/Offer/styles/styles.css
@@ -36,7 +36,7 @@
 
 .offer-title {
 	padding-bottom: 2.5rem;
-	color: #072028;
+	color: #c80c59;
 	font-family: 'Lavishly Yours', 'cursive';
 	font-size: 4.5rem;
 	font-weight: 300;
