--- a/src/components/OfferCarousel/styles/styles.css
+++ b/src/components/OfferCarousel/styles/styles.css
@@ -1,5 +1,5 @@
 .icon {
-	fill: #0f4353;
+	fill: #c80c59;
 	width: 100%;
 	transition: fill 0.3s;
 }
@@ -25,8 +25,8 @@
 .slider {
 	position: relative;
 	margin: 0 auto;
-	height: 70vmin;
-	width: 70vmin;
+	height: 85vmin;
+	width: 85vmin;
 	max-width: 645px;
 	max-height: 750px;
 }
@@ -42,21 +42,40 @@
 	transition: transform 0.6s cubic-bezier(0.25, 1, 0.35, 1);
 }
 
-.slider-controls {
+.slider-controls-wrapper {
+	position: absolute;
+	display: flex;
 	justify-content: center;
+	align-items: center;
 	top: calc(100% + 1rem);
 	width: 100%;
 }
 
+.slider-controls {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	width: 50%;
+}
+
 .slider-controls .btn {
+	position: absolute;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	padding: 0;
 	height: 4rem;
-	width: 4rem;
+	width: 2.5rem;
 	background-color: transparent;
 	border: 3px solid transparent;
 	border-radius: 100%;
+}
+
+.slider-controls .btn:first-of-type {
+	left: 1em;
+}
+.slider-controls .btn:last-of-type {
+	right: 1em;
 }
 
 .slider-controls .btn--previous > * {
@@ -74,8 +93,8 @@
 
 .slide {
 	flex: 1;
-	height: 70vmin;
-	width: 70vmin;
+	height: 85vmin;
+	width: 85vmin;
 	max-width: 645px;
 	max-height: 750px;
 	margin: 0 4vmin;
@@ -214,6 +233,14 @@
 	}
 }
 
+@media screen and (min-width: 768px) and (min-height: 500px) {
+	.slider,
+	.slide {
+		height: 70vmin;
+		width: 70vmin;
+	}
+}
+
 @media screen and (min-width: 1024px) {
 	.link-btn:hover {
 		background-color: #23a1b4;
@@ -221,6 +248,35 @@
 
 	.icon:hover {
 		fill: #23a1b4;
+	}
+}
+
+@media screen and (min-width: 1536px) {
+	.slider-controls-wrapper {
+		justify-content: space-between;
+		top: calc(42.5% + 1rem);
+	}
+
+	.slider-controls {
+		width: 100%;
+	}
+
+	.slider-controls .btn {
+		width: 4rem;
+	}
+
+	.slider-controls .btn:first-of-type {
+		left: -15em;
+	}
+
+	.slider-controls .btn:last-of-type {
+		right: -15em;
+	}
+}
+
+@media screen and (min-width: 1920px) and (max-height: 767px) {
+	.slide-headline {
+		font-size: 35px;
 	}
 }
 
