--- a/src/sections/Welcome/styles/styles.css
+++ b/src/sections/Welcome/styles/styles.css
@@ -49,12 +49,6 @@
 	}
 }
 
-@media screen and (min-height: 500px) {
-	.welcome-button {
-		display: block;
-	}
-}
-
 @media screen and (min-width: 640px) {
 	.welcome-title {
 		font-size: 7rem;
@@ -64,6 +58,12 @@
 @media screen and (min-width: 768px) and (min-height: 640px) {
 	.welcome-title {
 		font-size: 7.5rem;
+	}
+}
+
+@media screen and (min-width: 990px) and (min-height: 500px) {
+	.welcome-button {
+		display: block;
 	}
 }
 
