Updated aerograph section and improved offer section

--- a/src/sections/Aerograph/styles/styles.css
+++ b/src/sections/Aerograph/styles/styles.css
@@ -1,13 +1,9 @@
-.aerograph,
-.aerograph-text-content-box {
+.aerograph {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-}
-
-.aerograph {
-	position: relative;
 	padding: 30px 0 40px;
 	width: 100%;
 	overflow-x: hidden;
@@ -22,38 +18,43 @@
 }
 
 .aerograph-text-content {
-	padding-bottom: 1em;
+	padding: 1em 1em 2em;
 }
 
 .aerograph-text-content-box {
-	margin: 2em;
-	padding: 2em 0.5em 0;
-	max-width: 400px;
-	border: none;
-	border-radius: 1.5em;
-
-	-webkit-box-shadow: 0px 0px 10px 2px rgba(25, 50, 63, 0.45);
-	-moz-box-shadow: 0px 0px 10px 2px rgba(25, 50, 63, 0.45);
-	box-shadow: 0px 0px 10px 2px rgba(25, 50, 63, 0.45);
+	padding: 2em 0;
+	width: 100%;
+	max-width: 350px;
+	text-align: left;
+	z-index: 10;
 }
 
 .aerograph-text-content-box h3 {
-	padding: 1em;
+	padding-top: 1.25rem;
 	font-size: 1.5em;
-	font-weight: 200;
+	font-weight: 400;
 	font-style: italic;
-	text-align: center;
 }
 
 .aerograph-text-content-box p {
-	padding: 0 0.75em 2em;
-	text-align: center;
+	padding: 1.25em 0 1em;
 	font-weight: 300;
 	line-height: 1.75em;
 }
 
-.aerograph-text-content-box p span {
-	font-weight: 700;
+.aerograph-text-content-box:first-of-type {
+	padding: 0 0 2em;
+}
+
+.aerograph-text-content-box:last-of-type {
+	padding: 2em 0 0;
+}
+
+.aerograph-special-decoration {
+	height: 1px;
+	width: 55px;
+	background: #e9e9e9;
+	margin-bottom: 1em;
 }
 
 .aerograph-special-block {
@@ -81,8 +82,12 @@
 }
 
 @media screen and (min-width: 768px) {
+	.aerograph-text-content {
+		padding: 1em 1em 2.5em;
+	}
+
 	.aerograph-text-content-box {
-		max-width: 425px;
+		max-width: 460px;
 	}
 
 	.aerograph-special-block {
@@ -101,16 +106,6 @@
 	.aerograph {
 		padding-bottom: 3rem;
 	}
-
-	.aerograph-text-content {
-		display: flex;
-		justify-content: center;
-		flex-direction: row;
-		flex-wrap: wrap;
-		width: 100%;
-		padding-bottom: 3em;
-		max-width: 1000px;
-	}
 }
 
 @media screen and (min-width: 1358px) {
@@ -121,6 +116,32 @@
 	.aerograph-title {
 		padding: 0.5rem 0.85rem 2rem;
 		width: 100%;
+	}
+
+	.aerograph-text-content {
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+		padding: 2em 0 2em;
+		max-width: 1180px;
+		gap: 2em 6em;
+	}
+
+	.aerograph-text-content-box h3 {
+		font-size: 1.6em;
+	}
+
+	.aerograph-text-content-box p {
+		font-size: 1.05em;
+	}
+
+	.aerograph-text-content-box:first-of-type,
+	.aerograph-text-content-box:last-of-type {
+		padding: 2em 0;
+	}
+
+	.aerograph-special-decoration {
+		display: none;
 	}
 
 	.aerograph-special-block {
