--- a/src/components/OfferCarousel/styles/styles.css
+++ b/src/components/OfferCarousel/styles/styles.css
@@ -1,5 +1,5 @@
 .icon {
-	fill: #c80c59;
+	fill: #072028;
 	width: 100%;
 	transition: fill 0.3s;
 }
@@ -247,7 +247,7 @@
 	}
 
 	.icon:hover {
-		fill: #23a1b4;
+		fill: #e9e9e9;
 	}
 }
 
