--- a/src/components/Footer/styles/styles.css
+++ b/src/components/Footer/styles/styles.css
@@ -16,7 +16,7 @@
 	margin-top: 0.65rem;
 	width: 100%;
 	height: 1px;
-	background-color: #e9e9e9;
+	background-color: #fbfbfb;
 }
 
 .footer-copyright-box {
