--- a/src/components/Forms/styles/styles.css
+++ b/src/components/Forms/styles/styles.css
@@ -30,9 +30,9 @@
 .form-textarea {
 	padding: 0.95em 3.25em 0.95em 0.75em;
 	width: 100%;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: transparent;
-	border: 1px solid #e9e9e9;
+	border: 1px solid #fbfbfb;
 	font-family: 'Sour Gummy', sans-serif;
 	font-size: 0.9em;
 	letter-spacing: 1px;
@@ -105,7 +105,7 @@ form textarea:invalid[focused='true'] {
 	align-items: center;
 	padding: 0.75em 3.5em;
 	margin: 1em 1em 1.25em;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: #c80c59;
 	border: none;
 	border-radius: 2em;
