--- a/src/components/Navbar/styles/styles.css
+++ b/src/components/Navbar/styles/styles.css
@@ -64,7 +64,7 @@
 	display: flex;
 	right: 0;
 	margin: 1rem;
-	color: #e9e9e9;
+	color: #fbfbfb;
 }
 
 .navbar-mobile-list {
@@ -76,7 +76,7 @@
 	right: 0.25rem;
 	bottom: 0.25rem;
 	width: 80vw;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: #c80c59;
 	border-radius: 0.375rem;
 	box-shadow: 0 25px 50px -10px rgba(0, 0, 0, 0.25);
@@ -87,7 +87,7 @@
 .navbar-mobile-exit-icon {
 	align-self: flex-start;
 	margin: 0.5rem 0 1.5rem;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	font-size: 1.25rem;
 	cursor: pointer;
 }
@@ -103,7 +103,7 @@
 
 .navbar-item-link {
 	padding: 0.5rem;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	text-decoration: none;
 	text-transform: capitalize;
 	transition: color 0.3s ease-out;
@@ -117,7 +117,7 @@
 
 .navbar-special-anchor {
 	padding: 0.5rem;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	transition: color 0.3s ease-out;
 }
 
