--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html {
 
 body {
 	background-color: #072028;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	font-family: 'Sour Gummy', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
