--- a/src/sections/Aerograph/styles/styles.css
+++ b/src/sections/Aerograph/styles/styles.css
@@ -53,7 +53,7 @@
 .aerograph-special-decoration {
 	height: 1px;
 	width: 55px;
-	background: #e9e9e9;
+	background: #fbfbfb;
 	margin-bottom: 1em;
 }
 
