--- a/src/sections/Contact/styles/styles.css
+++ b/src/sections/Contact/styles/styles.css
@@ -51,7 +51,7 @@
 }
 
 .contact-title-subtext a {
-	color: #e9e9e9;
+	color: #fbfbfb;
 	text-underline-offset: 2px;
 	transition: color 0.3s;
 }
@@ -91,7 +91,7 @@
 }
 
 .contact-title-info-box a {
-	color: #e9e9e9;
+	color: #fbfbfb;
 	text-underline-offset: 2px;
 	transition: color 0.3s;
 }
