--- a/src/subpages/GallerySubpage/styles/styles.css
+++ b/src/subpages/GallerySubpage/styles/styles.css
@@ -40,7 +40,7 @@
 	display: block;
 	padding: 0.75em 3.5em;
 	margin: 3em 0;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: #c80c59;
 	border: none;
 	border-radius: 2em;
