--- a/src/subpages/PageNotFound/styles/styles.css
+++ b/src/subpages/PageNotFound/styles/styles.css
@@ -25,7 +25,7 @@
 .notfound-credits {
 	padding: 0.5em;
 	margin: 0.5em;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	font-size: 1.8em;
 	font-weight: 500;
 	text-align: center;
@@ -34,7 +34,7 @@
 .notfound-btn {
 	display: block;
 	padding: 0.75em 3.5em;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: #c80c59;
 	border: none;
 	border-radius: 2em;
