--- a/src/subpages/PrivacyPolicy/styles/styles.css
+++ b/src/subpages/PrivacyPolicy/styles/styles.css
@@ -55,7 +55,7 @@
 }
 
 .privacy-policy-box a {
-	color: #e9e9e9;
+	color: #fbfbfb;
 	font-weight: 500;
 	text-decoration: none;
 	transition: color 0.3s;
@@ -69,7 +69,7 @@
 	display: block;
 	padding: 0.75em 3.5em;
 	margin: 3em 0;
-	color: #e9e9e9;
+	color: #fbfbfb;
 	background-color: #c80c59;
 	border: none;
 	border-radius: 2em;
