--- a/src/components/OfferCarousel/styles/styles.css
+++ b/src/components/OfferCarousel/styles/styles.css
@@ -186,7 +186,7 @@
 	position: relative;
 	color: #fbfbfb;
 	padding-bottom: 5vmin;
-	font-size: 5vmin;
+	font-size: clamp(24px, 5vmin, 50px);
 	font-weight: 500;
 	font-style: italic;
 }
@@ -271,12 +271,6 @@
 
 	.slider-controls .btn:last-of-type {
 		right: -15em;
-	}
-}
-
-@media screen and (min-width: 1920px) {
-	.slide-headline {
-		font-size: 50px;
 	}
 }
 
