--- a/src/components/Footer/styles/styles.css
+++ b/src/components/Footer/styles/styles.css
@@ -15,8 +15,7 @@
 .footer-bar {
 	margin-top: 0.65rem;
 	width: 100%;
-	height: 1px;
-	background-color: #fbfbfb;
+	border: 1px solid var(--white-color);
 }
 
 .footer-copyright-box {
