--- a/src/components/Navbar/styles/styles.css
+++ b/src/components/Navbar/styles/styles.css
@@ -39,7 +39,7 @@
 }
 
 .navbar-container--is-scrolled {
-	background-color: #c80c59;
+	background-color: var(--pink-color);
 	-webkit-box-shadow: 0px 11px 16px -10px rgba(27, 27, 27, 1);
 	-moz-box-shadow: 0px 11px 16px -10px rgba(27, 27, 27, 1);
 	box-shadow: 0px 11px 16px -15px rgba(27, 27, 27, 1);
@@ -68,7 +68,7 @@
 	display: flex;
 	right: 0;
 	margin: 1rem;
-	color: #fbfbfb;
+	color: var(--white-color);
 }
 
 .navbar-mobile-list {
@@ -80,8 +80,8 @@
 	right: 0.25rem;
 	bottom: 0.25rem;
 	width: 80vw;
-	color: #fbfbfb;
-	background-color: #c80c59;
+	color: var(--white-color);
+	background-color: var(--pink-color);
 	border-radius: 0.375rem;
 	box-shadow: 0 25px 50px -10px rgba(0, 0, 0, 0.25);
 	list-style-type: none;
@@ -91,7 +91,7 @@
 .navbar-mobile-exit-icon {
 	align-self: flex-start;
 	margin: 0.5rem 0 1.5rem;
-	color: #fbfbfb;
+	color: var(--white-color);
 	font-size: 1.25rem;
 	cursor: pointer;
 }
@@ -107,7 +107,7 @@
 
 .navbar-item-link {
 	padding: 0.5rem;
-	color: #fbfbfb;
+	color: var(--white-color);
 	text-decoration: none;
 	text-transform: capitalize;
 	transition: color 0.3s ease-out;
@@ -121,7 +121,7 @@
 
 .navbar-special-anchor {
 	padding: 0.5rem;
-	color: #fbfbfb;
+	color: var(--white-color);
 	transition: color 0.3s ease-out;
 }
 
@@ -193,11 +193,11 @@
 	}
 
 	.pink-hover:hover {
-		color: #c80c59;
+		color: var(--pink-color);
 	}
 
 	.dark-hover:hover {
-		color: #072028;
+		color: var(--darker-sea-blue-color);
 	}
 }
 
