--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+	--white-color: #fbfbfb;
+	--gray-color: #c4c4c4;
+	--pink-color: #c80c59;
+	--blue-color: #23a1b4;
+	--sea-blue-color: #0f4353;
+	--dark-sea-blue-color: #0b313e;
+	--darker-sea-blue-color: #072028;
+	--default-font: 'Sour Gummy', sans-serif;
+	--special-font: 'Lavishly Yours', 'cursive';
+}
+
 *,
 *::after,
 *::before {
@@ -13,9 +25,9 @@ html {
 }
 
 body {
-	background-color: #072028;
-	color: #fbfbfb;
-	font-family: 'Sour Gummy', sans-serif;
+	background-color: var(--darker-sea-blue-color);
+	color: var(--white-color);
+	font-family: var(--default-font);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
