--- a/src/sections/Aerograph/styles/styles.css
+++ b/src/sections/Aerograph/styles/styles.css
@@ -11,7 +11,7 @@
 
 .aerograph-title {
 	padding-bottom: 2.5rem;
-	font-family: 'Lavishly Yours', 'cursive';
+	font-family: var(--special-font);
 	font-size: 4.5rem;
 	font-weight: 300;
 	text-align: center;
@@ -51,9 +51,8 @@
 }
 
 .aerograph-special-decoration {
-	height: 1px;
 	width: 55px;
-	background: #fbfbfb;
+	border: 1px solid var(--white-color);
 	margin-bottom: 1em;
 }
 
@@ -62,7 +61,7 @@
 	bottom: 0;
 	width: 40%;
 	height: 40px;
-	background-color: #c4c4c4;
+	background-color: var(--gray-color);
 }
 
 .aerograph-special-block--left {
