--- a/src/subpages/PrivacyPolicy/styles/styles.css
+++ b/src/subpages/PrivacyPolicy/styles/styles.css
@@ -55,7 +55,7 @@
 }
 
 .privacy-policy-box a {
-	color: #fbfbfb;
+	color: var(--white-color);
 	font-weight: 500;
 	text-decoration: none;
 	transition: color 0.3s;
@@ -69,8 +69,8 @@
 	display: block;
 	padding: 0.75em 3.5em;
 	margin: 3em 0;
-	color: #fbfbfb;
-	background-color: #c80c59;
+	color: var(--white-color);
+	background-color: var(--pink-color);
 	border: none;
 	border-radius: 2em;
 	font-size: 1em;
@@ -115,7 +115,7 @@
 	}
 
 	.privacy-policy-box a:hover {
-		color: #c80c59;
+		color: var(--pink-color);
 	}
 
 	.privacy-policy-btn {
@@ -124,7 +124,7 @@
 	}
 
 	.privacy-policy-btn:hover {
-		background-color: #23a1b4;
+		background-color: var(--blue-color);
 	}
 }
 
