--- a/src/components/CookieBanner/styles/styles.css
+++ b/src/components/CookieBanner/styles/styles.css
@@ -1,45 +1,94 @@
-.cookie-text {
-	padding: 0.25rem;
-	font-size: 13px;
+.cookie-banner-container {
+	position: fixed;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	height: 160px;
+	padding: 10px;
+	background-color: var(--pink-color);
+	-webkit-box-shadow: 0px 8px 16px 0 rgba(27, 27, 27, 1);
+	-moz-box-shadow: 0px 8px 16px 0 rgba(27, 27, 27, 1);
+	box-shadow: 0px 8px 16px 0 rgba(27, 27, 27, 1);
+	color: var(--white-color);
+	color: '#fff';
+	font-size: 12px;
+	text-align: center;
+	z-index: 200;
 }
 
-.cookie-anchor {
-	color: #fcd34d;
-	text-decoration: underline;
+.cookie-banner-button {
+	padding: 8px;
+	margin-top: 20px;
+	width: 120px;
+	background-color: var(--yellow-color);
+	border: none;
+	border-radius: 8px;
+	font-family: var(--default-font);
+	font-size: 14px;
+	transition: background-color 0.3s;
+	cursor: pointer;
 }
 
-@media screen and (max-width: 300px) {
-	.cookie-text {
-		padding: 0.75rem;
-	}
+.cookie-banner-text {
+	padding: 0.25em;
+	max-width: 380px;
+	line-height: 1.5em;
+}
+
+.cookie-banner-anchor {
+	color: var(--yellow-color);
+	transition: color 0.3s;
+	cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
-	.cookie-text {
-		font-size: 14px;
+	.cookie-banner-container {
+		justify-content: space-evenly;
+		flex-direction: row;
+		height: 100px;
+	}
+
+	.cookie-banner-button {
+		margin-top: 0;
+	}
+
+	.cookie-banner-text {
+		max-width: 460px;
 	}
 }
 
 @media screen and (min-width: 1024px) {
-	.cookie-text {
-		padding: 1em;
+	.cookie-banner-anchor:hover {
+		color: var(--darker-yellow-color);
 	}
-}
 
-@media screen and (min-width: 1358px) {
-	.cookie-text {
-		font-size: 15px;
+	.cookie-banner-button:hover {
+		background-color: var(--darker-yellow-color);
 	}
 }
 
 @media screen and (min-width: 1536px) {
-	.cookie-text {
-		margin-left: -7.25rem;
+	.cookie-banner-text {
+		max-width: 900px;
+		font-size: 1.1em;
+	}
+
+	.cookie-banner-button {
+		padding: 10px;
+		width: 160px;
+		font-size: 1.3em;
 	}
 }
 
-@media screen and (min-width: 1920px) {
-	.cookie-text {
-		margin-left: -18rem;
+@media screen and (min-width: 3136px) {
+	.cookie-banner-container {
+		justify-content: center;
+	}
+
+	.cookie-banner-text {
+		margin-right: 40rem;
 	}
 }
